# kalmankit

./: .buildinfo  .flake8  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  api.html  genindex.html  index.html  install.html  kalmankit.extended.html  kalmankit.html  kalmankit.standard.html  kalmankit.utils.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements-dev.txt  requirements-doc.txt  requirements.txt  run_tests.sh  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: cicd.yaml  deploy.yml  gh-pages.yml
_autosummary/: kalmanfilter.extended.html  kalmanfilter.standard.html  kalmankit.extended.html  kalmankit.standard.html  kalmankit.utils.html
_modules/: index.html
_modules/kalmankit/: extended.html  standard.html  utils.html
_sources/: api.rst.txt  index.rst.txt  install.rst.txt  kalmankit.rst.txt  kalmankit.standard.rst.txt  quickstart.rst.txt
_sources/_autosummary/: kalmanfilter.standard.rst.txt  kalmankit.extended.rst.txt  kalmankit.standard.rst.txt
_static/: documentation_options.js
docs/: make_docs.sh
docs/source/: api.rst  conf.py  index.rst  install.rst  kalmanfilter._standard.rst  kalmanfilter.extended.rst  kalmanfilter.rst  kalmanfilter.standard.rst  kalmankit.extended.rst  kalmankit.utils.rst  quickstart.rst
docs/source/_autosummary/: kalmanfilter.extended.rst  kalmankit.extended.rst  kalmankit.standard.rst  kalmankit.utils.rst
examples/: constant_velocity_smoothing.py  extended.py  ibex35.csv  market_beta.py  moving_average.py  pendulum.py  pendulum_smoothing.py  requirements-example.txt  signal_extraction.ipynb
kalmanfilter/: __init__.py  _standard.py  _version.py
src/kalmanfilter/: __init__.py  _version.py  extended.py  standard.py
src/kalmankit/: __init__.py  _version.py  extended.py  standard.py  typing.py  utils.py
tests/: __init__.py  test_extended.py  test_kalman.py  test_standard.py  test_utils.py
tests/data/: ibex35.pkl
