[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[versioneer]
VCS = git
style = pep440
versionfile_source = src/kalmanfilter/_version.py
versionfile_build = kalmanfilter/_version.py
tag_prefix = v
parentdir_prefix = kalmanfilter-

[tool:pytest]
minversion = 4.0.2
testpaths = kalmanfilter


[coverage:run]
branch = True
source = src
omit=
    tests/*,
    **/*/_version.py
    **/*/__init__.py,

[flake8]
# ignore = E226,E302,E41
# http://flake8.pycqa.org/en/2.6.0/warnings.html#error-codes
# https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
max-line-length = 79
max-complexity = 10
exclude =
    tests/*
    *versioneer*
    docs
    *version*
