[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[versioneer]
VCS = git
style = pep440
versionfile_source = src/kalmankit/_version.py
versionfile_build = kalmankit/_version.py
tag_prefix = v
parentdir_prefix = kalmankit-

[tool:pytest]
minversion = 4.0.2
testpaths = kalmankit


[coverage:run]
branch = True
source = src
omit=
    tests/*,
    **/*/_version.py
    **/*/__init__.py,

